src/test/ui/parser/brace-after-qualified-path-in-match.rs
fn main() {
    match 10 {
        <T as Trait>::Type{key: value} => (),
        //~^ ERROR unexpected `{` after qualified path
        _ => (),
    }
}
